samba (2:3.2.3-4) UNRELEASED; urgency=low

  * New upstream version.

 -- Steve Langasek <vorlon@debian.org>  Fri, 03 Oct 2008 23:31:03 -0700

samba (2:3.2.3-3) unstable; urgency=low

  [ Steve Langasek ]
  * Add missing manpage for cifs.upcall; thanks to Per Olofsson for pointing
    this out.  Closes: #497857.
  * Georgian debconf translation added. Closes: #498426
  * Polish debconf translation added. Thanks to Łukasz Paździora.

  [ Jelmer Vernooij ]
  * Add ldb-tools to Suggests: of samba. Closes: #488384

 -- Christian Perrier <bubulle@debian.org>  Fri, 03 Oct 2008 20:37:19 +0200

samba (2:3.2.3-2) unstable; urgency=low

  [ Christian Perrier ]
  * Fix FTBFS on GNU/kFreeBSD. Closes: #496880

 -- Steve Langasek <vorlon@debian.org>  Sat, 30 Aug 2008 00:46:07 -0700

samba (2:3.2.3-1) unstable; urgency=high

  * High-urgency upload for security fix
  * New upstream release
    - Fix "/usr/lib/cups/backend/smb does not try port 139 anymore by default"
      Closes: #491881
    - Fix the default permissions on ldb databases.  Addresses
      CVE-2008-3789; closes: #496073.
    - debian/rules, debian/smbfs.files: build with cifs.upcall,
      newly introduced to replace cifs.spnego
    - debian/rules: no more need to rename libsmbclient.so to
      libsmbclient.so.0, or libwbclient.so to libwbclient.so.0

  [ Noèl Köthe ]
  * fixing lintian warning "build-depends-on-1-revision"

 -- Steve Langasek <vorlon@debian.org>  Wed, 27 Aug 2008 10:19:59 -0700

samba (2:3.2.1-1) unstable; urgency=low

  [ Steve Langasek ]
  * Build-depend on keyutils only on the linux archs.  Closes: #493401.
  * New patch debian/patches/shrink-dead-code.patch: throw all .o files into
    a .a archive as a first pass before linking the final executables, so
    that the executables don't end up with quite so much unused code bloating
    the system.  Not applied to net or ntlm_auth, which have particularly
    hairy linking needs.  Partially addresses: bug #474543; no code was